It's a the working version app. IPI KEY from other app. Pay attention to this next time

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Insider</string>
     <string name="author_string">by %s</string>
+    <string name="source_name">%s</string>
 </resources>
